--- a/blueberries/.env
+++ b/blueberries/.env
@@ -1,2 +1,3 @@
 CHOKIDAR_USEPOLLING=true
 REACT_APP_BACKEND_URL=https://blueberries-shop-server.herokuapp.com/
+DEV_REACT_APP_BACKEND_URL=http://localhost:4000
