--- a/blueberries/package.json
+++ b/blueberries/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
     "dotenv": "^8.2.0",
+    "jspdf": "^2.3.0",
+    "jspdf-autotable": "^3.5.14",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
